--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,17 @@ services:
     volumes:
       - mongodb_data:/data/db
 
+  redis:
+    image: redis
+    restart: always
+    ports:
+      - '6379:6379'
+    command: ["redis-server", "--requirepass", "eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81"]
+    volumes: 
+      - redis:/data
+
 volumes:
   mongodb_data:
+    driver: local
+  redis:
     driver: local
